<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dots &amp; Squares</string>
    <string name="app_name_part_1">"Dots "</string>
    <string name="app_name_part_2">"&amp; "</string>
    <string name="app_name_part_3">Squares</string>
    <string name="choose_board_size">Choose board size</string>
    <string name="confirm_end_game">Are you sure to end the game?</string>
    <string name="confirm_restart">Are you sure to restart the game?</string>
    <string name="restarted_message">Game restarted</string>
    <string name="confirm_exit">Do you want to exit?</string>
    <string name="confirm_reset_settings">Are you sure to reset settings?</string>
    <string name="choose_opponent">Choose opponent</string>
    <string name="choose_bot_speed">Choose Bot Speed</string>
    <string name="bot_drawing_speed">Drawing speed </string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try Again</string>
    <string name="you_won">Congrats! You Won!</string>
    <string name="you_lost">Oops! You lost!</string>
    <string name="match_tied">Close game! It was a tie!</string>
    <string name="player1_name">Player 1 name</string>
    <string name="player2_name">Player 2 name</string>
    <string name="player1_details">Player 1</string>
    <string name="player2_details">Player 2</string>
    <string name="name">Name</string>
    <string name="pick_color">Color</string>
    <string name="bot">Bot</string>
    <string name="game">Game</string>
    <string name="drawing_color">Drawing Color</string>
    <string name="player_turn">Plays first</string>
    <string name="player_turn_question">Who plays first?</string>

    <!-- Preference Keys -->
    <string name="player1_name_preference_key">player1_name</string>
    <string name="player2_name_preference_key">player2_name</string>
    <string name="player1_color_preference_key">player1_color</string>
    <string name="player2_color_preference_key">player2_color</string>
    <string name="board_size_preference_key">board_size</string>
    <string name="opponent_preference_key">opponent</string>
    <string name="bot_drawing_speed_preference_key">bot_drawing_speed</string>
    <string name="foreground_color_preference_key">foreground_color</string>
    <string name="player_turn_preference_key">player_turn</string>
</resources>
