<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/background_dark" android:gravity="center">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:gravity="center" android:layout_weight="8">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
            <TextView android:text="@string/app_name_part_1" android:textColor="@color/foreground_default" style="@style/appTitle"/>
            <TextView android:text="@string/app_name_part_2" android:textColor="@color/player_1_default" style="@style/appTitle"/>
            <TextView android:text="@string/app_name_part_3" android:textColor="@color/player_2_default" style="@style/appTitle"/>
        </LinearLayout>
        <Button
                android:text="play"
                android:id="@+id/playButton"
                android:onClick="play" style="@style/menuButton"/>
        <Spinner
                android:id="@+id/board_size_options" android:prompt="@string/choose_board_size"
                style="@style/menuSpinner"/>
        <Spinner
                android:id="@+id/opponent_options" android:prompt="@string/choose_opponent"
                style="@style/menuSpinner"/>
        <Button
                android:text="settings"
                android:id="@+id/settingsButton"
                android:onClick="settings" style="@style/menuButton"/>
        <Button
                android:text="exit"
                android:id="@+id/exitButton"
                android:onClick="exit" style="@style/menuButton"/>
    </LinearLayout>
</LinearLayout>